---------------------------------------------------------------------------------------------------
Version: 0.3.1
Date: 2026-02-28
  Changes:
    - Evolution rework
    - Fixed horizontal trains warping
---------------------------------------------------------------------------------------------------
Version: 0.3.0
Date: 2026-02-27
  Changes:
    - Added enemy warp platforms.
    - Made transition time easier to survive and manage
    - Changed recipe cost for the garden floor
    - Allow for more train stops per cardinal direction
    - Asteroid rework is now done
    - Warp belts change color based on level
    - Improved english translation thanks to vinaghost
    - Fix train schedule overwriting other trains while warping
---------------------------------------------------------------------------------------------------
Version: 0.2.13
Date: 2026-01-27
  Changes:
    - Complete rework to the warp trains thanks to Bieder and  gnu-lorien
---------------------------------------------------------------------------------------------------
Version: 0.2.12
Date: 2025-10-31
  Changes:
    - Made it possible to make the game even harder
    - Fixed issue with robots building collector and warp chest
    - Changed garden floor to infinite research
    - rebalance some of the weapons
---------------------------------------------------------------------------------------------------
Version: 0.2.11
Date: 2025-10-18
  Changes:
    - Compatibility with Factorissimo 3 thanks to LIMachi
    - Fixed asteroid collecting giving items to the chest even when its already full
    - Fix teleporting with factory floor level 0
---------------------------------------------------------------------------------------------------
Version: 0.2.10
Date: 2025-10-18
  Changes:
    - Reworked warp transition
    - Changed sounds for big wave and next planet
    - Added setting to disable next planet chat message
    - Changed how is next planet selected
    - No more extra time on aquilo