@@ -1,7 +1,9 @@
 [tips-and-tricks-item-name]
 warptorio=[entity=warp-asteroid-chest] Warptorio Space age
 warptorio-warp-trains=Warp Trains Between Floors
+warptorio-evolution-scaling=Evolution (Difficulty) Scaling
 
 [tips-and-tricks-item-description]
 warptorio=Warptorio (Space Age).
 warptorio-warp-trains=Trains can be warped between the [font=default-bold]ground[/font] and the [font=default-bold]factory floor[/font] using special train stations.\n\nTo warp a train, it must be [color=yellow]fully stopped[/color] at a station named:\n • [color=orange]WarpGround[/color] (If you want to go to ground floor from the factory)\n • [color=orange]WarpFactory[/color] (If you want to go to factory floor from the ground floor)\n\n[color=red][font=default-bold]Important:[/font][/color]\nBoth stations must have the [color=red]same orientation[/color] (north, south, east, or west).\n\nIf the station names match but the orientations do not, the train will [font=default-bold]not warp[/font].\nTrain will also [font=default-bold]not warp[/font] if it is in manual more or when there is someone inside.\n\n[color=green]Tip:[/color] Copy or blueprint the station to ensure the orientation matches on both floors.If you want to have multiple train stops per cardinal direction disable all stations except one to ensure that train will go to that station.
+warptorio-evolution-scaling=Enemy evolution in Warptorio is [font=default-bold]not based on time or pollution[/font]. It is scaled by your progress through key platform researches.\n\nEach unlocked milestone research raises the enemy evolution to a fixed value:\n • [technology=warp-ground-platform-3] -> [color=orange]10%[/color]\n • [technology=warp-factory-platform-3] -> [color=orange]20%[/color]\n • [technology=warp-ground-platform-4] -> [color=orange]30%[/color]\n • [technology=warp-factory-platform-4] -> [color=orange]40%[/color]\n • [technology=warp-ground-platform-5] -> [color=orange]50%[/color]\n • [technology=warp-factory-platform-5] -> [color=orange]60%[/color]\n • [technology=warp-ground-platform-6] -> [color=orange]70%[/color]\n • [technology=warp-factory-platform-6] -> [color=orange]80%[/color]\n • [technology=warp-ground-platform-7] -> [color=orange]90%[/color]\n • [technology=warp-end-prepare] -> [color=red]100%[/color]\n\n[color=green]Tip:[/color] If you want to delay higher-tier enemies, postpone those researches until your base is ready.
